--- a/src/client/public/index.html
+++ b/src/client/public/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html style="height:100%;">
 	<head>
 		<link rel="stylesheet" href="/index.css" />
 		<link href='https://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css' />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />	
 	</head>
 
-	<body>
-		<div id="app"></div>
+	<body style="margin:0; min-height:100%;" >
+		<div id="app" style="min-height:100%;"></div>
 		<script src="bundle.js"></script>
 	</body>
 
